@@ -19,13 +19,12 @@ public class RankerController {
     private PopularityScorer popularityScorer;
     private double relevanceWeight = 0.7;
     private double popularityWeight = 0.3;
-
-    public List<InvertedIndexEntry> invertedIndexData;
+    private InvertedIndexService invertedIndexService;
 
     public RankerController(int totalDocuments, DocumentService documentServices, InvertedIndexService invertedIndexService) {
         this.relevanceScorer = new RelevanceScorer(totalDocuments);
         this.popularityScorer = new PopularityScorer(documentServices);
-        this.invertedIndexData = invertedIndexService.getAll();
+        this.invertedIndexService = invertedIndexService;
     }
 
     public List<RankedDocument> rankDocuments(String[] wordsArray) {
@@ -35,13 +34,12 @@ public class RankerController {
         Map<String, List<RankedDocument>> wordToDocsMap = new HashMap<>();
         Map<String, Integer> wordToDfMap = new HashMap<>();
 
-        // Prepare data structures for parallel processing
-        for (String word : wordsArray) {
-            InvertedIndexEntry entry = invertedIndexData.stream()
-                    .filter(e -> e.getWord().equals(word))
-                    .findFirst()
-                    .orElse(null);
+        // Fetch only the needed inverted index entries for the query words
+        Map<String, InvertedIndexEntry> queryWordEntries = invertedIndexService.getEntriesForWords(wordsArray);
 
+        // Prepare data structures using only the retrieved entries
+        for (String word : wordsArray) {
+            InvertedIndexEntry entry = queryWordEntries.get(word);
             if (entry != null && entry.getRankedPostings() != null && !entry.getRankedPostings().isEmpty()) {
                 wordToDocsMap.put(word, entry.getRankedPostings());
                 wordToDfMap.put(word, entry.getDf());
@@ -54,25 +52,26 @@ public class RankerController {
         // Normalize relevance scores in parallel
         relevanceScorer.normalizeScoresParallel(docScoresMap);
 
-        // Calculate popularity scores (already multithreaded from previous implementation)
-        docScoresMap = popularityScorer.calculatePopularityScores(docScoresMap);
+        // Calculate popularity scores
+        popularityScorer.calculatePopularityScores(docScoresMap);
 
-        // Calculate final scores - this is relatively fast so keeping it sequential
-        for (RankedDocument doc : docScoresMap.values()) {
-            double normalizedRelevance = doc.getRelevanceScore();
-            double normalizedPopularity = doc.getPopularityScore();
-            double finalScore = (relevanceWeight * normalizedRelevance) + (popularityWeight * normalizedPopularity);
+        // Calculate final scores with parallel stream for better performance
+        docScoresMap.values().parallelStream().forEach(doc -> {
+            double finalScore = (relevanceWeight * doc.getRelevanceScore()) +
+                    (popularityWeight * doc.getPopularityScore());
             doc.setFinalScore(finalScore);
-        }
+        });
 
-        // Convert HashMap values to a List and sort by FinalScore
+        // Convert to List and sort - use ArrayList for better performance
         List<RankedDocument> result = docScoresMap.values().stream()
                 .sorted(Comparator.comparingDouble(RankedDocument::getFinalScore).reversed())
-                .toList();
-
-        // Clean up thread pools
-        relevanceScorer.shutdown();
+                .collect(Collectors.toList());
 
         return result;
+    }
+
+    public void shutdown() {
+        relevanceScorer.shutdown();
+        popularityScorer.shutdown(); // Assuming this method exists
     }
 }
